tests/baselines/reference/unusedIdentifiersConsolidated1.errors.txt
tests/cases/compiler/unusedIdentifiersConsolidated1.ts(1,18): error TS6133: 'person' is declared but its value is never read.
tests/cases/compiler/unusedIdentifiersConsolidated1.ts(2,9): error TS6133: 'unused' is declared but its value is never read.
tests/cases/compiler/unusedIdentifiersConsolidated1.ts(5,32): error TS6133: 'unusedtypeparameter' is declared but its value is never read.
tests/cases/compiler/unusedIdentifiersConsolidated1.ts(6,13): error TS6133: 'unusedprivatevariable' is declared but its value is never read.
tests/cases/compiler/unusedIdentifiersConsolidated1.ts(7,13): error TS6133: 'greeting' is declared but its value is never read.
tests/cases/compiler/unusedIdentifiersConsolidated1.ts(11,17): error TS6133: 'message' is declared but its value is never read.
tests/cases/compiler/unusedIdentifiersConsolidated1.ts(12,13): error TS6133: 'unused2' is declared but its value is never read.
tests/cases/compiler/unusedIdentifiersConsolidated1.ts(16,20): error TS6133: 'person' is declared but its value is never read.
tests/cases/compiler/unusedIdentifiersConsolidated1.ts(17,13): error TS6133: 'unused' is declared but its value is never read.
tests/cases/compiler/unusedIdentifiersConsolidated1.ts(24,13): error TS6133: 'unUsedPrivateFunction' is declared but its value is never read.
tests/cases/compiler/unusedIdentifiersConsolidated1.ts(37,11): error TS6133: 'numberRegexp' is declared but its value is never read.
tests/cases/compiler/unusedIdentifiersConsolidated1.ts(44,17): error TS6133: 'unUsedPrivateFunction' is declared but its value is never read.
tests/cases/compiler/unusedIdentifiersConsolidated1.ts(57,15): error TS6196: 'usedLocallyInterface2' is declared but never used.
tests/cases/compiler/unusedIdentifiersConsolidated1.ts(64,11): error TS6196: 'dummy' is declared but never used.
tests/cases/compiler/unusedIdentifiersConsolidated1.ts(67,15): error TS6196: 'unusedInterface' is declared but never used.
tests/cases/compiler/unusedIdentifiersConsolidated1.ts(79,11): error TS6196: 'class3' is declared but never used.
tests/cases/compiler/unusedIdentifiersConsolidated1.ts(99,15): error TS6196: 'interface5' is declared but never used.


==== tests/cases/compiler/unusedIdentifiersConsolidated1.ts (17 errors) ====
    function greeter(person: string) {
                     ~~~~~~
!!! error TS6133: 'person' is declared but its value is never read.
        var unused = 20;
            ~~~~~~
!!! error TS6133: 'unused' is declared but its value is never read.
    }
    
    class Dummy<usedtypeparameter, unusedtypeparameter> {
                                   ~~~~~~~~~~~~~~~~~~~
!!! error TS6133: 'unusedtypeparameter' is declared but its value is never read.
        private unusedprivatevariable: string;
                ~~~~~~~~~~~~~~~~~~~~~
!!! error TS6133: 'unusedprivatevariable' is declared but its value is never read.
        private greeting: string;
                ~~~~~~~~
!!! error TS6133: 'greeting' is declared but its value is never read.
        public unusedpublicvariable: string;
        public typedvariable: usedtypeparameter;
    
        constructor(message: string) {
                    ~~~~~~~
!!! error TS6133: 'message' is declared but its value is never read.
            var unused2 = 22;
                ~~~~~~~
!!! error TS6133: 'unused2' is declared but its value is never read.
            this.greeting = "Dummy Message";
        }
    
        public greeter(person: string) {
                       ~~~~~~
!!! error TS6133: 'person' is declared but its value is never read.
            var unused = 20;
                ~~~~~~
!!! error TS6133: 'unused' is declared but its value is never read.
            this.usedPrivateFunction();
        }
    
        private usedPrivateFunction() {
        }
    
        private unUsedPrivateFunction() {
                ~~~~~~~~~~~~~~~~~~~~~
!!! error TS6133: 'unUsedPrivateFunction' is declared but its value is never read.
        }
    }
    
    var user = "Jane User";
    var user2 = "Jane2 User2";
    
    namespace Validation {
        export interface StringValidator {
            isAcceptable(s: string): boolean;
        }
    
        const lettersRegexp = /^[A-Za-z]+$/;
        const numberRegexp = /^[0-9]+$/;
              ~~~~~~~~~~~~
!!! error TS6133: 'numberRegexp' is declared but its value is never read.
    
        export class LettersOnlyValidator implements StringValidator {
            isAcceptable(s2: string) {
                return lettersRegexp.test(s2);
            }
    
            private unUsedPrivateFunction() {
                    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS6133: 'unUsedPrivateFunction' is declared but its value is never read.
            }
        }
    
        export class ZipCodeValidator implements StringValidator {
            isAcceptable(s3: string) {
                return s3.length === 5;
            }
        }
    
        interface usedLocallyInterface {
        }
    
        interface usedLocallyInterface2 {
                  ~~~~~~~~~~~~~~~~~~~~~
!!! error TS6196: 'usedLocallyInterface2' is declared but never used.
            someFunction(s1: string): void;
        }
    
        export interface exportedInterface {
        }
    
        class dummy implements usedLocallyInterface {
              ~~~~~
!!! error TS6196: 'dummy' is declared but never used.
        }
    
        interface unusedInterface {
                  ~~~~~~~~~~~~~~~
!!! error TS6196: 'unusedInterface' is declared but never used.
        }
    }
    
    
    namespace Greeter {
        class class1 {
        }
    
        export class class2 extends class1 {
        }
    
        class class3 {
              ~~~~~~
!!! error TS6196: 'class3' is declared but never used.
        }
    
        export class class4 {
        }
    
        interface interface1 {
        }
    
        export interface interface2 extends interface1 {
        }
    
        interface interface3 {
        }
    
        export interface interface4 {
        }
    
        export let a: interface3;
    
        interface interface5 {
                  ~~~~~~~~~~
!!! error TS6196: 'interface5' is declared but never used.
        }
    }